<resources>
    <string name="app_name">浙江理工大学快递代领</string>
    <string name="title_activity_express">浙江理工大学快递代领</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">清除搜索条件设置</string>

    <string name="title_expressages">快递列表</string>
    <string name="title_post">发布内容</string>
    <string name="title_post_records">发布记录</string>
    <string name="title_help_records">代领记录</string>
    <string name="title_to_comments">评价管理</string>
    <string name="title_credit">信用积分</string>
    <string name="title_personal">个人信息</string>
    <string name="title_messages">消息记录</string>
    <string name="title_exit">退出登录</string>
    <string name="all_confirm">确认</string>
    <string name="all_cancel">取消</string>
    <string name="do_login">登录</string>

    <string name="error_fetching_tags">加载标签失败</string>
    <string name="no_tags">暂无标签</string>
    <string name="success_executing">操作成功</string>
    <string name="failed_executing">操作失败</string>
    <string name="failed_pushing">推送通知出错</string>
    <string name="input_empty">请完整填写必须信息</string>
    <string name="network_busy">网络繁忙</string>
    <string name="no_data">没有更多记录</string>

    <string name="state_sending">状态：待完成</string>
    <string name="state_not_send">状态：未领取</string>
    <string name="state_done">状态：已收到</string>
    <string name="state_expired">状态：已过期</string>
    <string name="state_disabled">状态：已取消</string>
    <string name="state_error">该快递状态出错</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comment">CommentActivity</string>


</resources>
